ready for review

--- a/V2/Project Outputs for Badge_V2/Design Rule Check - Badge_V2.html
+++ b/V2/Project Outputs for Badge_V2/Design Rule Check - Badge_V2.html
@@ -211,7 +211,7 @@
 	</script><title>Design Rule Verification Report</title>
 </head>
 <body onload=""><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\AD18\Templates\AD_logo.png
+			file://C:\Users\Public\Documents\Altium\AD20\Templates\AD_logo.png
 		"><h1>Design Rule Verification Report</h1>
 <table class="header_holder">
 <td class="column1">
@@ -219,17 +219,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">4/30/2020</td>
+<td class="front_matter_column3">7/16/2020</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">10:21:54 AM</td>
+<td class="front_matter_column3">9:05:29 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:00</td>
+<td class="front_matter_column3">00:00:02</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDIMRTH44QYH2QCG0F2NGXX4THGNAQOL3OVN145FDKMAK4P4E21TK"><h2>Summary</h2></a><table>
+</table><a name="IDWBDVFFOHW3NXIIXHWHAXURS3EJQQN0IAIQPMHHBL1NLW3OQURIHN"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDEUTEJAKWIH4KEMPE15RCFI4VFI3BLOIE2VP5CNPCKF1XGJ5ILBVD">Clearance Constraint (Gap=0.152mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID2EKVCA1YIDA4JGVRGS4R3C0XAHWX4CS4KJZSGPF0QE3DYBRN0LQI">Clearance Constraint (Gap=6mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDKTZHYMVLFDANPFCS0ODMAXTNWGX0BDDWUMZ2HYKE31SRXNUTRWPD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDOHFBRBZGSAB2D2EL2WUN05DJHMDKVH4Z154NS0EE3MZXYQQFCCRH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDN5PLSH1KLWQQKDMNVBFYS1PARDM4445RXB33KJHRHGVLYA0CH5FE">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDNQQPX1ZNXVDHDEIKYVG0XX0IQBAS0K5GJQG33JBAWXCKXY3NBWUN">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID53RB1SR2C35XBU3WCPQDODF115SUYPPIFFPMEQOCNTRVTJL0IC">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDKX3LLQSLCESHDVKZPA1D1CQMRLWGMPR3RMV5P3KKO5ZRKV2F5FX">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDUHQYOG3HJOAUIPEXHGIRYNBU0FMD5MMKDIOXF4BHIDQRN5PUQN4J">Width Constraint (Min=0.254mm) (Max=2.54mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#IDLRXH4KTYPHRX2QKKVD5OCETMJ0KQ1EJRPJZVTOKBP23IMH3X5UE">Width Constraint (Min=10mil) (Max=100mil) (Preferred=10mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID55ZDCGP4QYDHPZ12FAQQ2KNFUETYBWUZ2UR0MIBURIX1LBVKM5AB">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDSTNL24UNMWJD3GCXBNC1DVLSMD1D15QD1HV3GPBEQGQMXV1PAVN">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMBWY3RZ5PE4LFU3KUD5SXHH32JIA02QZAEB1DHOKOIJNR0CBTANK">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
+<td class="column1"><a href="#ID2VVU3VVMQM3PKGTTTLETNUSWANXI13GT4V4GAOB4MVNLW0NM4VWL">Hole Size Constraint (Min=1mil) (Max=100mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDPDBS3VMMKMTCJIPORAVXXPULVLFGZFHDOND2DZPZ24BUVWPUTZ3G">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDRJTX105PL2ULPYASOCZO2GUB1GG3AHP3513XN1FJNPQ3CTF2QWQG">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDIDNRTCC3ENEMKJYMO14Y43X3SGKYQNTDHU3GRTP5VZTH0JT3E3NI">Minimum Solder Mask Sliver (Gap=0.102mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDDEU3ZVOLL4AXKSN2AGTDVVALLI5K1ABASRUISSEDK2DNKXPZKLFH">Minimum Solder Mask Sliver (Gap=4mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHWVK2SEN2N5EHJCEYAZUKQJT4FZRLDGRLA3DFUDG3CR14XJQXYJL">Silk To Solder Mask (Clearance=0mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDKJPJOMRGKRKFORH4JMMUY2JF3ONGASR5VZA4L3JX30VPFYHT5BVN">Silk To Solder Mask (Clearance=0mil) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID5QCXV1TTAF02JS2GPD5X3S4F3BL50XGQIZ1FLIJHEA2X5ZIEH2RP">Silk to Silk (Clearance=0mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID1VDERNK3DQORNPIMI5AXC01XZDJP50LVWX5PWQP2HRHAKWHABTNG">Silk to Silk (Clearance=0mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVF0TGPTV2UNYGFRCRC5APLJBGOPVDTPCXW5CG0JUIAM5DG3SAYEC">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDRNC2EDXHGROQJ3ZCI0L5T2JBLGXKZ1IMBCSXU2PUEYNSUFJLEH2L">Net Antennae (Tolerance=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDRJEDHOOAS4E5LVJXNW3NDJOVXNJZSC35GUN2RSBUV2EYQMFFOQE">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDLQ1PABGXQOPQJMO1W5JB1ZP3ZO1P5UE0V3KVDQGYLUKQFJIF1V3G">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
